--- a/postgrest.conf
+++ b/postgrest.conf
@@ -1,4 +1,4 @@
-db-uri = "postgres://sigenapi:password@postgresql.upr.edu.cu:5432/sigenu_dev"
+db-uri = "postgres://sigenapi:password@postgresql.upr.edu.cu:5432/sigenu"
 db-schema = "public"
 db-anon-role = "sigenu_onlyselect"
 
